# SquirrellAI

./: .eslintrc.cjs  .gitignore  README.md  eslint.config.cjs  package.json  pyproject.toml  tsconfig.base.json  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yml
apps/: README.md
apps/ai-engine/: README.md
apps/ai-engine/application/: AgentExecutionService.ts
apps/ai-engine/domain/: openapi-spec-validator.ts  tool-contract-definitions.ts  tool-contracts.ts  tool-execution.ts  tool-validation.ts
apps/ai-engine/src/: __init__.py  index.js  main.py
apps/ai-engine/tests/: AgentExecutionService.test.ts  ToolRegistry.test.ts
apps/core-platform/: README.md  package.json  tsconfig.json
apps/core-platform/src/: app.module.ts  main.ts
apps/core-platform/test/: control-plane.test.ts
apps/types/: node-shims.d.ts
apps/web/: index.html  package.json  tsconfig.json
docs/api/: contracts.md
docs/architecture/: README.md  adr-0001-monorepo-layout.md  adr-0001-orchestration-contracts.md  canonical-topology.md
infra/compose/: docker-compose.yml
infra/docker/: Dockerfile  ai-engine-worker.Dockerfile  ai-engine.Dockerfile  api-gateway.Dockerfile  core-platform.Dockerfile
services/ai-engine/: package.json  tsconfig.tsbuildinfo
services/api-gateway/: package.json  tsconfig.json  tsconfig.tsbuildinfo
src/platform/: sandbox-platform.ts
src/types/: node-shim.d.ts
test/: docker-sandbox.service.spec.ts  sandbox-execution.service.spec.ts  tool-command-policy.spec.ts
tests/: execution-response.spec.ts  redaction.spec.ts
types/: external.d.ts
(+72 files in other folders)
