[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[project]
name = "squirrellai-ai-engine"
version = "0.1.0"
description = "AI execution engine for SquirrellAI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.6,<1.0.0",
  "pydantic>=2.10.3,<3.0.0",
  "uvicorn[standard]>=0.32.1,<1.0.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.25.0,<1.0.0",
  "ruff>=0.8.4,<1.0.0",
  "mypy>=1.13.0,<2.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["apps/ai-engine/src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["apps/ai-engine/src"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
mypy_path = "apps/ai-engine/src"
